Automatically backed up by Learn

--- a/app/views/programmers/show.html.erb
+++ b/app/views/programmers/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "layouts/navbar" %>
 <%= link_to '<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>'.html_safe, root_path %>
 
 <h3>
