--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -2,7 +2,5 @@
 <h1>Our Favorite Programmers</h1>
 
 <ul class="list-group">
-<% @programmers.each do |programmer| %>
-  <%= render partial: "programmer", locals: {programmer: programmer} %>
-<% end %>
+  <%= render partial: "programmer", collection: @programmer %>
 </ul>
