--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -2,5 +2,5 @@
 <h1>Our Favorite Programmers</h1>
 
 <ul class="list-group">
-  <%= render partial: "programmer", collection: @programmer %>
+  <%= render @programmers %>
 </ul>
